res/css/default.css
:root {
  --background-color: #f0f0f0;
  --header-background-color: #d1d1d1;
  --text-color: #333333;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background-color: #181819;
    --header-background-color: #1E1E20;
    --text-color: #b0b0b0;
  }
}

* {
  font-family: "Helevetica Neue", "Segoe UI", Helvetica, Arial, sans-serif;
  font-weight: 300;
  letter-spacing: 0.02em;
  font-size: 1.05em;
  color: var(--text-color);
  background-color: var(--background-color);
}

footer {
  margin: 0px;
  padding: 1em;
}

body {
  text-align: center;
  margin: 0px;
}

h1 {
  margin-top: 0px;
  padding: 1em;
  font-size: 2.5em;
  background-color: var(--header-background-color);
}

div.body {
  padding-left: 1em;
  padding-right: 1em;
}

p {
  margin-top: 2em;
  margin-bottom: 2em;
}

a {
  color: var(--text-color);
  text-decoration-color: #00aaff;
  font-weight: bold;
}

a:visited {
  color: var(--text-color);
  text-decoration-color: #7d3186;
}

b {
  font-weight: normal;
}

pre {
  white-space: pre-wrap;
  white-space: -moz-pre-wrap;
  white-space: -pre-wrap;
  white-space: -o-pre-wrap;
  word-wrap: break-word;
}

